2012-07-11 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Correct CMT requirements and remove dummy pickle file
    * Minor changes to mk-trf-pickle script
    * Tagging as PATJobTransforms-00-04-27    

2012-07-06 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Remove unnecessary padding code in rhadd.py; cosmetic improvements
    * Add mergeParallel argument to enable parallel rhadd.py merges from transform
    * Convert mergeParallel and mergeChunks to BasicIntArg
    * Add asetup argument for switching release before running athena; added to LODPK for Reco_trf
    *** Important: From this tag onwards you require PyJobTransformsCore >= 00-09-24 ***
    * Tagging as PATJobTransforms-00-04-26

2012-07-06 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Add PATJobTransformsSignatures.pickle dummy file (avoid CMT warning)
    * Give correct location for PATJobTransformsSignatures.pickle in requirements (../share)
    
2012-07-05 Nurcan Ozturk <nurcan@uta.eduh>
        * Corrected 'Outputntup_TAUMEDIUMFile' to 'outputNTUP_TAUMEDIUMFile' in MergeNTUP_trf.py
        * Tagging as PATJobTransforms-00-04-25

2012-06-29 Nurcan Ozturk <nurcan@uta.eduh>
        * Added NTUP_TAU and NTUP_TAUFULL D3PD formats to MergeNTUP_trf.py
        * Tagging as PATJobTransforms-00-04-24

2012-06-28 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
	* Added the NTUP_TAUFULL D3PD format to Reco_trf.py
	* Tagging as PATJobTransforms-00-04-23

2012-06-25 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Add mergeChunks argument for recursive merging (Configuration.py, MergeNTUP_trf.py)
    * Add rhadd.py to manage recursive merging
    * Switch to rhadd.py if mergeChunks is defined in skeleton.MergeNTUP_trf.py
    * Tagging as PATJobTransforms-00-04-22    

2012-06-22 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Move pickled arg list into share area with sensible name/path (requirements)
    * Improvements to mk-trf-argpickle 
